--- a/styles/style.css
+++ b/styles/style.css
@@ -290,8 +290,67 @@ left: 55%;
   height: 100%;
 }
 
-.portfolio-items{
+.portfolio-items {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+}
+
+/* footer section styles */
+.footer-container {
+  border: 1px solid red;
+  width: 100%;
+  height: 609px;
+  background: rgb(7, 2, 17);
+  color: rgb(255, 255, 255);
+}
+
+.footer-first-section {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 120px;
+  margin-bottom: 50px;
+}
+
+.footer-first-section p {
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  /* line-height: 40px; */
+}
+
+.contact {
+  display: flex;
+  gap: 10px;
+}
+
+.hr {
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+.social-icons {
+  padding-top: 50px;
+  width: 400px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  margin-bottom: 50px;
+}
+
+.footer-end-text {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.footer-end-text p {
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
 }
