--- a/styles/style.css
+++ b/styles/style.css
@@ -298,7 +298,6 @@ left: 55%;
 
 /* footer section styles */
 .footer-container {
-  border: 1px solid red;
   width: 100%;
   height: 609px;
   background: rgb(7, 2, 17);
@@ -310,7 +309,7 @@ left: 55%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  margin-top: 120px;
+  padding-top: 120px;
   margin-bottom: 50px;
 }
 
@@ -318,7 +317,6 @@ left: 55%;
   font-family: Inter;
   font-size: 24px;
   font-weight: 500;
-  /* line-height: 40px; */
 }
 
 .contact {
