--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@ body {
     rgba(255, 0, 0, 0) 100%
   );
   height: 482px;
-  margin-bottom: 120px;
+  margin-bottom: 10px;
   border-radius: 16px;
   font-family: "Inter", sans-serif;
 }
@@ -180,6 +180,63 @@ body {
   padding: 16px 32px;
   border: none;
   border-radius: 8px;
+}
+
+/* offer section styles */
+.offer-container {
+  width: 100%;
+  height: 463px;
+  margin-bottom: 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.offer-container h5 {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+  margin-bottom: 4px;
+}
+
+.offer-container h1 {
+  color: rgb(7, 2, 17);
+  font-family: Merriweather;
+  font-size: 48px;
+  font-weight: 900;
+  margin-bottom: 10px;
+}
+
+.offer-container p {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.offer-first-side {
+  width: 33.33%;
+}
+
+.offer-middle-side {
+  width: 33.33%;
+}
+
+.offer-last-side {
+  width: 33.33%;
+}
+
+.offer-last-side h4 {
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.offer-last-side p {
+  margin-bottom: 30px;
 }
 
 /* holiday sales section styles */
