--- a/styles/style.css
+++ b/styles/style.css
@@ -353,6 +353,68 @@ left: 55%;
   gap: 10px;
 }
 
+/* subscribe section styles */
+.subscribe-container {
+  width: 100%;
+  height: 616px;
+  border-radius: 16px;
+  background: rgba(255, 0, 0, 0.05);
+  margin-bottom: 120px;
+}
+
+.subscribe-container h2 {
+  color: rgb(7, 2, 17);
+  font-size: 48px;
+  font-weight: 900;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+.subscribe-container p {
+  color: rgba(7, 2, 17, 0.6);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.subscribe-letter {
+  width: 896px;
+  height: 336px;
+  margin: 0 auto;
+  text-align: center;
+  padding-top: 80px;
+  margin-bottom: 100px;
+}
+
+.subscribe-btn {
+  width: 648px;
+  height: 72px;
+  margin: 0 auto;
+  border-radius: 50px;
+  background: rgb(255, 255, 255);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.subscribe-btn p {
+  color: rgba(7, 2, 17, 0.3);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  padding-left: 30px;
+}
+
+.button {
+  color: rgb(255, 255, 255);
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 600;
+  border-radius: 0px 50px 50px 0px;
+  background: rgb(255, 0, 0);
+  padding: 24px 56px;
+  border: none;
+}
 /* footer section styles */
 .footer-container {
   width: 100%;
